# sendgrid-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/reqwest/: Cargo.toml
examples/reqwest/src/: main.rs
src/: attachment.rs  lib.rs  mail_settings.rs  message.rs  personalization.rs  tracking_settings.rs
